--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <title>Webpack App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <h2>Tip: Check your console</h2>
+    <div id="root">
+      <div>다람쥐 헛 챗바퀴에</div>
+    </div>
   </body>
 </html>
