feat: 테스팅 문구 삭제

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,6 @@
     />
   </head>
   <body>
-    <div id="root">
-      <div>다람쥐 헛 챗바퀴에</div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
